# SplatNLP

./: .gitignore  .python-version  AGENTS.md  Makefile  README.md  TFIDF_DASHBOARD.md  dockerfile  pyproject.toml  schema_updates.sql
.claude/commands/: investigate.md
.claude/skills/mechinterp-glossary-and-constraints/: SKILL.md
.claude/skills/mechinterp-investigator/: SKILL.md
.claude/skills/mechinterp-labeler/: SKILL.md
.claude/skills/mechinterp-overview/: SKILL.md
.claude/skills/mechinterp-runner/: SKILL.md
.claude/skills/splatoon3-meta/references/: abilities.md  archetypes.md  synergies.md  weapon-vibes.md  weapons.md
.github/workflows/: tests.yml
configs/: sae-sweep-update.yaml  sae-sweep.yaml
docs/: LLM_POLISH_GUIDE.md  PROJECT_ONEPAGER.md  README.md  RESUME_BULLETS.md  SHOWCASE.md  START_HERE.md  api-serving.md  build-reconstruction.md  data-augmentation.md  evaluation-metrics.md  experiment-tracking.md  full_vs_ultra_feature_depth.md  mechinterp_workflow.md  model-architecture.md  preprocessing-pipeline.md  sendou_tier1_eval_report.md  sparse-autoencoder.md  testing.md  training-infrastructure.md
docs/assets/: model.html
models/: doc2vec.model
notebooks/: colab_demo.ipynb
scripts/: make_dashboard_dataset.sh  run_basic_training.sh  run_model_embeddings.sh  sae_training.sh  train_sae.py
src/splatnlp/: run_dashboard.py  util.py
src/splatnlp/dashboard/: README.md  STORAGE_README.md  activations_cli.py  app.py  cache_loader.py  cached_efficient_database.py  cached_fs_database.py  cli.py  compute_correlations_efficient.py  consolidate_activations_efficient.py  database_manager.py  efficient_fs_database.py  extract_top_examples.py  fs_database.py  generate_activations.py  multi_batch_loader.py  precompute_analytics.py  storage_backends.py  storage_config.py  streaming_consolidate.py
src/splatnlp/embeddings/: _optional.py  analysis_helpers.py  analyze.py  cli.py  clustering.py  dimensionality_reduction.py  inference.py  load.py  train.py  weapon_topography_cli.py
src/splatnlp/etl/: connections.py  constants.py
src/splatnlp/eval/: sendou_baseline.py  sendou_compare.py  sendou_decoder_ablations.py  sendou_mode_baseline.py  sendou_stats.py
src/splatnlp/feature_analysis/: README.md  __init__.py  analyzer.py  config.py  defaults.py  example.py  factory.py  utils.py
src/splatnlp/mechinterp/: __init__.py
src/splatnlp/model/: basic_training_cli.py  cli.py  config.py  evaluation.py  grid_search.py  models.py  training_loop.py  utils.py
src/splatnlp/model_embeddings/: __init__.py  cli.py  extract.py  harness.py  harness_cli.py  io.py  model_loader.py  trajectory.py  trajectory_cli.py  verify.py  verify_cli.py
src/splatnlp/monosemantic_sae/: cli.py  data_objects.py  feature_analysis.py  hooks.py  models.py  training_loop.py  utils.py
src/splatnlp/monosemanticity_train/: cli.py  data_objects.py  hooks.py  models.py  sae_training.py  training_loop.py
src/splatnlp/preprocessing/: constants.py  pipeline.py  pull.py  save.py  weapon_data.py
src/splatnlp/research/: cli.py  models.py  training_loop.py
src/splatnlp/retrieval/: parse.py  pull.py
src/splatnlp/serve/: app.py  inference.py  load_model.py  tokenize.py
src/splatnlp/training/: load.py
src/splatnlp/utils/: constants.py  convert_ddp_state.py  download_artifacts.py  infer.py  reconstruct.py
src/splatnlp/viz/: cluster_labels.py  dimensionality_reduction.py  sae_plots.py  sendou_decoder_ablations_charts.py  setup_style.py  weapon_images.py
tests/: test_allocate.py  test_classes.py  test_dataset.py  test_generate_datasets.py  test_greedy_closure.py  test_hook.py  test_model_utils.py  test_reconstruct_build.py  test_reconstruct_tracing.py  test_set_completion_model.py  test_tokenize.py  test_training_loop.py  test_transform_create.py  test_utils.py
(+134 files in other folders)
